Removed unnecessary overflow to fix dialog clipping

--- a/lesscss/prompts.less
+++ b/lesscss/prompts.less
@@ -2,7 +2,6 @@
   padding: @medium-spacer;
   flex-shrink: 1;
   align-items: center;
-  overflow-y: auto;
   min-height: @prompt-minimum-height + (@medium-spacer * 4);
 
   &.empty {
